ingress.yaml
apiVersion: networking.k8s.io/v1
kind: "Ingress"
metadata: 
  name: "movie-ingress"
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    ingressclass.kubernetes.io/is-default-class: "true"
spec: 
  ingressClassName: nginx
  rules: 
    - host: ""
      http: 
        paths: 
          - path: /movie
            pathType: Prefix
            backend: 
              service:
                name: movie
                port:
                  number: 8080
          - path: /payment
            pathType: Prefix
            backend: 
              service:
                name: payment
                port:
                  number: 8080
          - path: /rating
            pathType: Prefix
            backend: 
              service:
                name: rating
                port:
                  number: 8080
          - path: /screen
            pathType: Prefix
            backend: 
              service:
                name: screen
                port:
                  number: 8080
          - path: /reservation
            pathType: Prefix
            backend: 
              service:
                name: reservation
                port:
                  number: 8080
          - path: /dashboard
            pathType: Prefix
            backend: 
              service:
                name: dashboard
                port:
                  number: 8080
